changed to addition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="multiplication-box">
         <div id="first-num"></div>
         <div class="answer-row">
-            <div id="times">x</div>
+            <div id="times">+</div>
             <div id="second-num"></div>
         </div>
         
