corrected addition title

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script defer src="./js/main.js"></script>
-    <title>Multiplication</title>
+    <title>Addition</title>
 </head>
 <body>
-    <h1>Multiplication is Fun!</h1>
+    <h1>Addition is Fun!</h1>
     <div id="multiplication-box">
         <div id="first-num"></div>
         <div class="answer-row">
